objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Day_Date__c</fullName>
        <label>Business Day Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cashier_ID__c</fullName>
        <label>Cashier ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cashier_Name__c</fullName>
        <label>Cashier Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coupon_Number__c</fullName>
        <label>Coupon Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_expiry__c</fullName>
        <label>Last 12M expiry</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Purchase_Number__c</fullName>
        <externalId>true</externalId>
        <label>Purchase Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Associate_ID__c</fullName>
        <label>Sales Associate ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Associate_Name__c</fullName>
        <label>Sales Associate Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_City__c</fullName>
        <label>Store City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Description__c</fullName>
        <label>Store Description</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_ID__c</fullName>
        <label>Store ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Market__c</fullName>
        <label>Store Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tender_Type_Group__c</fullName>
        <label>Tender Type Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_Amount__c</fullName>
        <label>Total Discount Amount</label>
        <summarizedField>Transaction_Item__c.Discount_Amount__c</summarizedField>
        <summaryForeignKey>Transaction_Item__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Date_Time__c</fullName>
        <label>Transaction Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Sequence_Number__c</fullName>
        <label>Transaction Sequence Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_in_last_12_Months__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction in last 12 Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voucher_Number__c</fullName>
        <label>Voucher Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>